--- a/.env
+++ b/.env
@@ -31,3 +31,9 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=4c13afe8a2e03982e4c466ae84f5b100
+###< lexik/jwt-authentication-bundle ###
