--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -30,8 +30,8 @@ security:
             jwt: ~
 
     access_control:
-        - { path: ^/api, roles: IS_AUTHENTICATED_FULLY } # Allows accessing the Swagger UI
-        - { path: ^/docs, roles: PUBLIC_ACCESS } # Allows accessing API documentations and Swagger UI docs
+        - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/docs, roles: PUBLIC_ACCESS }
         - { path: ^/auth, roles: PUBLIC_ACCESS }
         - { path: ^/api/users, roles: PUBLIC_ACCESS }
         - { path: ^/, roles: IS_AUTHENTICATED_FULLY }
