--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -30,7 +30,6 @@ security:
             jwt: ~
 
     access_control:
-        - { path: ^/api, roles: PUBLIC_ACCESS }
-        - { path: ^/docs, roles: PUBLIC_ACCESS }
+        - { path: ^/api, roles: PUBLIC_ACCESS } # Allows accessing the Swagger UI
+        - { path: ^/docs, roles: PUBLIC_ACCESS } # Allows accessing API documentations and Swagger UI docs
         - { path: ^/auth, roles: PUBLIC_ACCESS }
-        - { path: ^/api/users, roles: PUBLIC_ACCESS }
